<resources>
    <string name="app_name">X mall</string>
    <string name="version_current">version 1.1</string>
    <string name="email">Email</string>
    <string name="passowrd">Password</string>
    <string name="login">Login</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">New User ? Signup</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">I Agree all Terms and Conditions.</string>
    <string name="signUp">singup</string>
    <string name="already_user">Already register ? Login</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="property_rentals">Property Rentals</string>
    <string name="property_for_sale">Property for Sale</string>
    <string name="api_map_key">AIzaSyCecWn2Ty5icj0ZwDl9DROgT4kGmrG6r3U</string>
    <string name="action_settings">Settings</string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="loading">Loading...</string>
    <string name="facebook_app_id">160268414713255</string>
    <string name="fb_login_protocol_scheme">fb316357288833005</string>
    <string name="my_facebook_app_id">AIzaSyBXm6aFkWBcEd-6bzVrPJRj4SjV82Rb4tI</string>
    <string name="skip">Skip</string>
    <string name="autocomplete_hint">Search a Place</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="last_update_time_label">Last location update time</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="film_genres">Film genres</string>
    <string-array name="film_genre">
        <item>Personal</item>
        <item>Housing</item>
        <item>For sale</item>
        <item>Jobs</item>
        <item>Services</item>
        <item>Live Audio</item>
        <item>Chat</item>
    </string-array>
    <string-array name="actionFilms">
        <item>Dr. No (1962)</item>
        <item>Goldfinger (1964)</item>
        <item>Thunderball (1965)</item>
        <item>Live and Let Die (1973)</item>
        <item>Moonraker (1979)</item>
        <item>For Your Eyes Only (1981)</item>
        <item>Octopussy (1983)</item>
        <item>A View to a Kill (1985)</item>
        <item>Licence to Kill (1989)</item>
        <item>GoldenEye (1995)</item>
    </string-array>
    <string-array name="musicals">
        <item>Naughty Marietta (1935)</item>
        <item>Rose Marie (1936)</item>
        <item>Maytime (1937)</item>
        <item>Sweethearts (1938)</item>
        <item>Bitter Sweet (1940)</item>
        <item>New Moon (1940)</item>
        <item>I Married an Angel (1942)</item>
        <item>Lady Be Good (1941)</item>
        <item>Ship Ahoy (1942)</item>
        <item>Sensations of 1945 (1944)</item>
    </string-array>
    <string-array name="dramas">
        <item>Home of the Brave (1949)</item>
        <item>The Accused (1949)</item>
        <item>12 Angry Men (1957)</item>
        <item>Compulsion (1959)</item>
        <item>Inherit the Wind (1960)</item>
        <item>To Kill a Mockingbird (1962)</item>
        <item>Mrs. Miniver (1942)</item>
        <item>Since You Went Away (1944)</item>
        <item>The Champ (1931)</item>
        <item>Nashville (1975)</item>
    </string-array>
    <string-array name="thrillers">
        <item>Alien (1979)</item>
        <item>The French Connection (1971)</item>
        <item>High Noon (1952)</item>
        <item>Double Indemnity (1944)</item>
        <item>Safety Last (1923)</item>
        <item>The Lady From Shanghai (1948)</item>
        <item>The Third Man (1949)</item>
        <item>Rear Window (1954)</item>
        <item>The 39 Steps (1935)</item>
        <item>Shadow of a Doubt (1943)</item>
    </string-array>
    <string-array name="comedies">
        <item>Safety Last (1923)</item>
        <item>Duck Soup (1933)</item>
        <item>Cat Ballou (1965)</item>
        <item>What\'s Up, Tiger Lily? (1966)</item>
        <item>Blazing Saddles (1974)</item>
        <item>Play It Again, Sam (1972)</item>
        <item>The Cheap Detective (1978)</item>
        <item>The Naked Gun (1988)</item>
        <item>The Freshman (1990)</item>
        <item>Waiting for Guffman (1996) </item>
    </string-array>
    <string name="camera_permission_confirmation">This app demonstrates the usage of CameraView. In order to do that, it needs permission to access camera.</string>
    <string name="camera_permission_not_granted">Camera app cannot do anything without camera permission.</string>
    <string name="picture_taken">Picture taken</string>
    <string name="jobs">Jobs</string>
    <string name="house_rentals">House Rentals</string>
    <string name="for_sale">For Sale</string>
    <string name="services">Business Services</string>
    <string name="personals">Personals</string>
    <string name="community">Community</string>
    <string name="showcase">Showcase</string>
    <string name="event_calender">Event Calender</string>
    <string name="privacy">privacy</string>
    <string-array name="privacy_arrays">
        <item>Select</item>
        <item>Phone</item>
        <item>Video</item>
        <item>Chat</item>
    </string-array>
    <string name="language">Language :</string>
    <string-array name="language_arrays">
        <item>Select</item>
        <item>English</item>
        <item>French</item>
        <item>Spanish</item>

    </string-array>
    <string name="gender">gender</string>
    <string name="cancel">cancel</string>
    <string name="update">update</string>
    <string name="phone_no">Phone Number :</string>
    <string name="education">education</string>
    <string name="interest">interest</string>
    <string name="Workplace">Workplace</string>
    <string name="Occupation">Occupation</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="past_link_here">Past link here</string>
    <string name="Sociallink">Social Link</string>
    <string-array name="gender_arrays">
        <item>Select</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="job_type_arrays">
        <item>Select</item>
        <item>Part Time</item>
        <item>Full time</item>
    </string-array>
    <string-array name="do_have_any_pet_arrays">
        <item>Select</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="how_many_renters_will_live_here">How many renters will live here ?</string>
    <string-array name="WeekdayName">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="Time_in_Am">

        <item>1 AM</item>
        <item>2 AM</item>
        <item>3 AM</item>
        <item>4 AM</item>
        <item>5 AM</item>
        <item>6 AM</item>
        <item>7 AM</item>
        <item>8 AM</item>
        <item>9 AM</item>
        <item>10 AM</item>
        <item>11 AM</item>
        <item>12 AM</item>
    </string-array>
    <string-array name="Time_in_Pm">
        <item>1 PM</item>
        <item>2 PM</item>
        <item>3 PM</item>
        <item>4 PM</item>
        <item>5 PM</item>
        <item>6 PM</item>
        <item>7 PM</item>
        <item>8 PM</item>
        <item>9 PM</item>
        <item>10 PM</item>
        <item>11 PM</item>
        <item>12 PM</item>
    </string-array>
    <string-array name="Salary_as_per">
        <item>Select</item>
        <item>/ Hour</item>
        <item>/ Day</item>
        <item>/ Week</item>
        <item>/ Month</item>
        <item>/ Year</item>

    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="you_city">You city</string>
    <string name="all_categeries">All categeries</string>
    <string name="phone_number">Phone number</string>
    <string name="categories">Categories</string>
    <string name="buy_now">Buy Now</string>
    <string name="view_profile">View Profile</string>
    <string name="apply_for_job">Apply for job</string>
    <string name="job_description">Job Description</string>
    <string name="full_name">Full Name :</string>
    <string name="about_me">About Me :</string>
    <string name="education_head">Education </string>
    <string name="title1"> 1) Qualification :</string>
    <string name="title2"> 2) Qualification :</string>
    <string name="title3"> 3) Qualification :</string>
    <string name="school_collage">School / College</string>
    <string name="address_location">Address / Location</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="duration">Duration :</string>
    <string name="skills">Skills :</string>
    <string name="add_something_else">Add Something Else :</string>
    <string name="your_city">your city</string>
    <string name="post_your_ad">Post Your Ad</string>
    <string name="business_company_name">Business /Company Name :</string>
    <string name="your_company_name">your company name</string>
    <string name="about_business">About Business:</string>
    <string name="description_of_services">Description of Services :</string>
    <string name="social_media_link">Social Media Link :</string>
    <string name="website">Website :</string>
    <string name="category">Category :</string>
    <string name="customer_reviews">Customer Reviews</string>
    <string name="review">Review</string>
    <string name="safe_payment_online_credit_card_needed">Safe payment online. Credit card needed.</string>
    <string name="credit_card_number">CREDIT CARD NUMBER</string>
    <string name="cvv_code">CVV CODE</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="name_on_card">NAME ON CARD</string>
    <string name="em_hint_account">your Account </string>
    <string name="em_hint_dont_have_account">New User ?</string>
    <string name="em_hint_already_have_account">Already have an account!</string>
    <string name="em_hint_input_not_null">The input must not be empty</string>
    <string name="em_hint_loading">Loading……</string>
    <string name="em_hint_password">Password</string>
    <string name="em_hint_sign_in">Input your account sign in, Account can not contain \'\@\'!</string>
    <string name="em_hint_sign_up">Enter the account you want to register, the account can make the phone number,
        or any length of the string should be all lowercase letters or numbers,
        in addition to (.) (_) (-) can not contain other special characters,
        can not be e-mail Account</string>
    <string name="em_call_voice">Voice call</string>
    <string name="em_call_video">Video call</string>
    <string name="em_call_accepted">Call is connected</string>
    <string name="em_call_busy">The other side is busy</string>
    <string name="about_the_business">About the Business :</string>
    <string name="other_category">Other Category</string>
    <string name="enter_category_name">Enter Category Name</string>
</resources>