<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:padding="16dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1">
            <TableRow>
                <TextView
                    android:padding="3dip"
                    android:text="@string/gender"
                    android:textColor="@color/action_bar_colour" />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/genderSpinner"
                    android:entries="@array/gender_arrays"
                    android:gravity="start"
                    android:padding="3dip"
                    android:prompt="@string/gender" />
            </TableRow>

            <TableRow
                android:layout_marginTop="10dp"
                >
                <TextView
                    android:padding="3dip"
                    android:text="@string/date_of_birth"
                    android:textColor="@color/action_bar_colour" />
                <EditText
                    android:id="@+id/dobEditText"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/edit_text_style"
                    android:focusable="false"
                    android:gravity="start"
                    android:hint="@string/date_of_birth"
                    android:inputType="date"
                    android:maxLines="1"
                    android:padding="3dip"
                    android:paddingEnd="9dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="9dp"
                    android:paddingStart="8dp"
                    android:textColor="@color/colorHeader"
                    android:textColorHint="@color/grey" />

            </TableRow>

            <TableRow
                android:layout_marginTop="10dp">
                <TextView
                    android:padding="3dip"
                    android:text="@string/Occupation"
                    android:textColor="@color/action_bar_colour" />
                <EditText
                    android:id="@+id/occEditText"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/edit_text_style"
                    android:gravity="start"
                    android:hint="@string/Occupation"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:padding="3dip"
                    android:paddingEnd="9dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="9dp"
                    android:paddingStart="8dp"
                    android:singleLine="true"
                    android:textColor="@color/colorHeader"
                    android:textColorHint="@color/grey" />
            </TableRow>

            <TableRow
                android:layout_marginTop="10dp">
                <TextView
                    android:padding="3dip"
                    android:text="@string/Workplace"
                    android:textColor="@color/action_bar_colour" />
                <EditText
                    android:id="@+id/WorkPlaceEditText"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/edit_text_style"
                    android:gravity="start"
                    android:hint="@string/Workplace"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:padding="3dip"
                    android:paddingEnd="9dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="9dp"
                    android:paddingStart="8dp"
                    android:singleLine="true"
                    android:textColor="@color/colorHeader"
                    android:textColorHint="@color/grey" />
            </TableRow>

            <TableRow
                android:layout_marginTop="10dp">
                <TextView
                    android:padding="3dip"
                    android:text="@string/interest"
                    android:textColor="@color/action_bar_colour" />
                <EditText
                    android:id="@+id/InterestEditText"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/edit_text_style"
                    android:gravity="start"
                    android:hint="@string/interest"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:padding="3dip"
                    android:paddingEnd="9dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="9dp"
                    android:paddingStart="8dp"
                    android:singleLine="true"
                    android:textColor="@color/colorHeader"
                    android:textColorHint="@color/grey" />
            </TableRow>

            <TableRow
                android:layout_marginTop="10dp">
                <TextView
                    android:padding="3dip"
                    android:text="@string/education"
                    android:textColor="@color/action_bar_colour" />
                <EditText
                    android:id="@+id/EducationEditText"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/edit_text_style"
                    android:gravity="start"
                    android:hint="@string/education"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:padding="3dip"
                    android:paddingEnd="9dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="9dp"
                    android:paddingStart="8dp"
                    android:singleLine="true"
                    android:textColor="@color/colorHeader"
                    android:textColorHint="@color/grey" />
            </TableRow>

            <TableRow
                android:layout_marginTop="10dp">
                <TextView
                    android:padding="3dip"
                    android:text="@string/phone_no"
                    android:textColor="@color/action_bar_colour" />
                <EditText
                    android:id="@+id/phoneNumberEditText"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/edit_text_style"
                    android:gravity="start"
                    android:hint="@string/phone_no"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:padding="3dip"
                    android:paddingEnd="9dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="9dp"
                    android:paddingStart="8dp"
                    android:singleLine="true"
                    android:textColor="@color/colorHeader"
                    android:textColorHint="@color/grey" />
            </TableRow>


            <TableRow
                android:layout_marginTop="10dp">
                <TextView
                    android:padding="3dip"
                    android:text="@string/Sociallink"
                    android:textColor="@color/action_bar_colour" />
                <EditText
                    android:id="@+id/SocialLinkEditText"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/edit_text_style"
                    android:gravity="start"
                    android:hint="@string/past_link_here"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:padding="3dip"
                    android:paddingEnd="9dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="9dp"
                    android:paddingStart="8dp"
                    android:singleLine="true"
                    android:textColor="@color/colorHeader"
                    android:textColorHint="@color/grey" />
            </TableRow>
        </TableLayout>


   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="10dp"
       android:gravity="center">

       <Button
           android:id="@+id/cancel_button"
           android:layout_width="120dp"
           android:layout_height="32dp"
           android:layout_alignParentLeft="true"
           android:layout_alignParentStart="true"
           android:layout_marginEnd="10dp"
           android:layout_marginRight="10dp"
           android:background="@drawable/cancelbuttomshape"
           android:text="@string/cancel"
           android:textAllCaps="false"
           android:textColor="@color/white" />

       <Button
           android:id="@+id/update_button"
           android:layout_width="120dp"
           android:layout_height="32dp"
           android:layout_marginLeft="10dp"
           android:layout_marginStart="10dp"
           android:layout_toEndOf="@+id/cancel_button"
           android:layout_toRightOf="@+id/cancel_button"
           android:background="@drawable/blue_btn"
           android:text="@string/update"
           android:textAllCaps="false"
           android:textColor="@color/white" />
   </RelativeLayout>

    </LinearLayout>

</ScrollView>