<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbackground"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_above="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:paddingBottom="10dp"
        android:background="@drawable/item_shadow_bg"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cat_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="Select Categories"
                android:textColor="@color/action_bar_colour"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/SpinnerCat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="0dp"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@+id/cat_TextView">

            </android.support.v7.widget.AppCompatSpinner>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="0dp"
                android:text="@string/other_category"
                android:textColor="@color/DarkBlue"
                android:textSize="18sp"
                android:visibility="gone" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:hint="@string/enter_category_name"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="18sp"
                android:visibility="gone" />

            <TextView

                android:id="@+id/business_name_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="0dp"
                android:text="@string/business_company_name"
                android:textColor="@color/DarkBlue"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/EditTextBusinessName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:hint="@string/your_company_name"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/abount_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="0dp"
                android:text="@string/about_the_business"
                android:textColor="@color/DarkBlue"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/EditTextAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:hint="@string/about_business"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/description_header_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="0dp"
                android:text="@string/description_of_services"
                android:textColor="@color/DarkBlue"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/EditTextDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:hint="@string/description_of_services"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/social_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="0dp"
                android:text="@string/social_media_link"
                android:textColor="@color/DarkBlue"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/EditTextSocialMedia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:hint="@string/social_media_link"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/website_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="0dp"
                android:text="@string/website"
                android:textColor="@color/DarkBlue"
                android:textSize="18sp" />

            <EditText

                android:id="@+id/EditTextWebsite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:hint="@string/website"
                android:inputType="textUri"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/TextViewHouseOfOpertion"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/white_greyish"
                android:gravity="center|left"
                android:paddingLeft="8dp"
                android:text="Hours of operation"
                android:textColor="@color/action_bar_colour" />

            <TextView
                android:id="@+id/clickTV"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/white_greyish"
                android:gravity="center|left"
                android:paddingLeft="8dp"
                android:text="Click to Add / Edit"
                android:textColor="@color/logo_color" />



        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom">

        <include layout="@layout/postyou345addbuttom" />
    </LinearLayout>

</RelativeLayout>