<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:padding="16dp"
    >

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1">


            <TableRow
                android:layout_marginTop="10dp"
                >
                <TextView
                    android:padding="3dip"
                    android:text="@string/fullName"
                    android:textColor="@color/action_bar_colour" />
                <EditText
                    android:id="@+id/editTextName"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/edit_text_style"
                    android:gravity="start"
                    android:hint="@string/fullName"
                    android:maxLines="1"
                    android:padding="3dip"
                    android:paddingEnd="9dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="9dp"
                    android:paddingStart="8dp"
                    android:textColor="@color/colorHeader"
                    android:textColorHint="@color/grey" />

           </TableRow>
        </TableLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="120dp"
                android:layout_height="32dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/cancelbuttomshape"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/update_button"
                android:layout_width="120dp"
                android:layout_height="32dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/cancel_button"
                android:layout_toRightOf="@+id/cancel_button"
                android:background="@drawable/blue_btn"
                android:text="@string/update"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </RelativeLayout>

    </android.support.v7.widget.LinearLayoutCompat>

</ScrollView>